--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,11 @@
 .App {
     margin: 0 auto;
-    width: 80%;
+    width: 100%;
     min-height: 100vh;
+}
+
+.opacity {
+    opacity: .3;
 }
 
 .wrapper {
