--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -64,7 +64,6 @@
     color: white;
 }
 
-
 .cardLarge {
     position: relative;
     height: 450px;
@@ -115,6 +114,7 @@
 .btnLarge {
     height: 100%;
     width: 100%;
+    text-align: center;
     font-size: 20px;
     border: none;
     border-radius: 5px;
